# mcb

./: .gitignore  CHANGELOG.md  CLAUDE.md  ChangeLog.md  DISTRIBUTED_SYSTEMS_TEST_ANALYSIS.md  LICENSE  README.md  cabal.project  mcb.cabal  package.yaml
.beads/: issues.jsonl
.claude/: settings.local.json
.claude/agents/: code-writer.md  distributed-systems-tester.md  haskell-library-reviewer.md  readme-updater.md  task-orchestrator.md
.github/workflows/: ci.yml
app/: Main.hs
bench/: Main.hs
doctest/: Main.hs
src/: CircuitBreaker.hs  MCB.hs
src/CircuitBreaker/: Bulkhead.hs  Core.hs  Exceptions.hs  Fallback.hs  Predicate.hs  RateLimiter.hs  Resilience.hs  Retry.hs  SlidingWindow.hs  Timeout.hs  Types.hs
src/CircuitBreaker/Internal/: State.hs
test/: Main.hs
test/Test/Integration/: Fallback.hs  Resilience.hs  TimeoutCircuitBreaker.hs  TimeoutCircuitBreakerConcurrency.hs  WithCircuitBreaker.hs
test/Test/Performance/: WithCircuitBreaker.hs
test/Test/Property/: Placeholder.hs  SlidingWindow.hs  State.hs
test/Test/Unit/: Bulkhead.hs  Exceptions.hs  Fallback.hs  Placeholder.hs  Predicate.hs  RateLimiter.hs  Retry.hs  SlidingWindow.hs  State.hs  Timeout.hs  Types.hs
